[gd_scene load_steps=4 format=3 uid="uid://cl03svb38qy0a"]

[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="1_m0j0g"]
[ext_resource type="Texture2D" path="res://mobile control ui/Default/joystick_circle_pad_a.png" id="2_jf7h7"]

[node name="HUD" type="CanvasLayer"]
script=ExtResource("1_m0j0g")

[node name="MarginContainer" type="MarginContainer" parent="." index="0"]
anchor_right=1.0
anchor_bottom=1.0
offset_left=16.0
offset_top=16.0
offset_right=-16.0
offset_bottom=-16.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" index="0"]
anchor_right=0.0
anchor_bottom=0.0

[node name="HealthBar" type="TextureProgressBar" parent="MarginContainer/VBoxContainer" index="0"]
value=100.0
max_value=100.0
custom_minimum_size=Vector2(300, 32)

[node name="WaveLabel" type="Label" parent="MarginContainer/VBoxContainer" index="1"]
theme_override_font_sizes/font_size=24
text="Wave: 1"

[node name="MobileOverlay" type="Control" parent="." index="1"]
anchor_right=1.0
anchor_bottom=1.0

[node name="Joystick" type="TextureRect" parent="MobileOverlay" index="0"]
texture=ExtResource("2_jf7h7")
modulate=Color(1, 1, 1, 0.6)
offset_left=40.0
offset_top=-280.0
offset_right=280.0
offset_bottom=-40.0
anchor_left=0.0
anchor_top=1.0
anchor_right=0.0
anchor_bottom=1.0

[node name="FireButton" type="Button" parent="MobileOverlay" index="1"]
text="FIRE"
offset_left=-212.0
offset_top=-180.0
offset_right=-40.0
offset_bottom=-40.0
anchor_left=1.0
anchor_top=1.0
anchor_right=1.0
anchor_bottom=1.0

[node name="JumpButton" type="Button" parent="MobileOverlay" index="2"]
text="JUMP"
offset_left=-212.0
offset_top=-340.0
offset_right=-40.0
offset_bottom=-200.0
anchor_left=1.0
anchor_top=1.0
anchor_right=1.0
anchor_bottom=1.0

[node name="ReloadButton" type="Button" parent="MobileOverlay" index="3"]
text="RELOAD"
offset_left=-212.0
offset_top=-500.0
offset_right=-40.0
offset_bottom=-360.0
anchor_left=1.0
anchor_top=1.0
anchor_right=1.0
anchor_bottom=1.0

[node name="GameOver" type="ColorRect" parent="." index="2"]
anchor_right=1.0
anchor_bottom=1.0
color=Color(0, 0, 0, 0.7)
visible=false

[node name="Label" type="Label" parent="GameOver" index="0"]
anchor_left=0.5
anchor_top=0.5
anchor_right=0.5
anchor_bottom=0.5
offset_left=-200.0
offset_top=-40.0
offset_right=200.0
offset_bottom=40.0
text="Game Over"
horizontal_alignment=1
vertical_alignment=1
theme_override_font_sizes/font_size=48